--- a/FinalProject_Spring2020.ipynb
+++ b/FinalProject_Spring2020.ipynb
@@ -2067,7 +2067,7 @@
    "source": [
     "###### I tried three different model, LogisticRegression, DecisionTree, and RandomForest. Each of this model had almost similar Score. For LogisticRegression I applied Normalization to train data. Without Normalizing the score was around 77%. After Normalizing the Score almost goes upto 83%. \n",
     "\n",
-    "###### For Decision Tree \n"
+    "###### For Decision Tree I applied 1 - 10 different depth, using brute-force search to find the best depth for the tree. \n"
    ]
   },
   {
